--- a/app/src/main/res/layout/activity_income_expense_grid_view.xml
+++ b/app/src/main/res/layout/activity_income_expense_grid_view.xml
@@ -1,11 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IncomeExpenseGridView"
-    android:padding="16dp">
+    android:fitsSystemWindows="true"
+    tools:context=".IncomeExpenseGridView">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+
+
+    <!-- Toolbar -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#F44336"
+        android:elevation="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <!-- Add New Row Button -->
@@ -18,7 +36,9 @@
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="16dp"
+        android:padding="8dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Column Headers -->
@@ -28,6 +48,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:background="#EEEEEE"
         android:elevation="2dp"
         app:layout_constraintTop_toBottomOf="@id/btn_add"
@@ -52,7 +74,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
-            android:text="ধরন"
+            android:text="তারিখ"
             android:textColor="#F44336"
             android:textStyle="bold"
             android:textSize="14sp"
@@ -78,9 +100,24 @@
         android:id="@+id/recycler_view_income_expense_grid_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@id/column_headers"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Left menu -->
+<com.google.android.material.navigation.NavigationView
+android:id="@+id/nav_view"
+android:layout_width="280dp"
+android:layout_height="match_parent"
+android:layout_gravity="start"
+android:background="#F5F5F5"
+app:itemTextColor="#F44336"
+app:itemIconTint="#F44336"
+app:headerLayout="@layout/nav_header"
+app:menu="@menu/drawer_menu" />
+
+    </androidx.drawerlayout.widget.DrawerLayout>
