--- a/app/src/main/res/layout/income_expense_table_view.xml
+++ b/app/src/main/res/layout/income_expense_table_view.xml
@@ -31,12 +31,12 @@
 
             <!-- Section Column -->
             <TextView
-                android:id="@+id/tv_income_type"
+                android:id="@+id/tv_income_date"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
                 android:layout_weight="1.5"
                 android:gravity="center_vertical"
-                android:text="Section"
+                android:text="Date"
                 android:textColor="#070707"
                 android:textStyle="bold"
                 android:textSize="14sp"
